--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
          <a href="./signup.html">SignUp</a>
     </div>
     
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
