--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,6 @@
       <a href="./index.html">login</a>
     </div>
 
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
